Add security on the API
